layout bug fix

--- a/front/src/sass/global.scss
+++ b/front/src/sass/global.scss
@@ -18,6 +18,7 @@ html {
   }
   
   .bg-dark {
+    padding: 2rem 0;
     background-color: #12002b;
   }
   
